--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "6to5": "^3.3.12",
     "6to5-core": "^3.3.12",
     "6to5-loader": "^3.0.0",
+    "coveralls": "^2.11.2",
     "istanbul": "^0.3.5",
     "jshint": "^2.6.0",
     "jshint-loader": "^0.8.2",
@@ -25,7 +26,8 @@
     "build:prod": "node node_modules/.bin/webpack --config webpack.config.minify.js",
     "build": "npm run build:dist & npm run build:prod",
     "ci": "npm run test && npm run coverage && npm run build",
-    "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/index.test.js --compilers js:6to5/register"
+    "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/index.test.js --compilers js:6to5/register",
+    "coveralls": "cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
