--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "6to5-core": "^3.3.12",
     "6to5-loader": "^3.0.0",
     "coveralls": "^2.11.2",
+    "ghooks": "^0.2.4",
     "istanbul": "^0.3.5",
     "jshint": "^2.6.0",
     "jshint-loader": "^0.8.2",
     "mocha": "^2.1.0",
     "mocha-loader": "^0.7.1",
-    "webpack": "^1.5.3"
+    "webpack": "^1.5.3",
+    "wr": "^1.3.1"
   },
   "scripts": {
     "test": "mocha src/index.test.js --compilers js:6to5/register",
-    "dev": "mocha src/index.test.js --watch --compilers js:6to5/register",
+    "test:watch": "mocha src/index.test.js --watch --compilers js:6to5/register",
+    "watch": "./node_modules/wr/bin/wr -c 0 \"npm run build\" src/apiCheck.js src/apiCheckUtil.js src/checkers.js src/index.js",
+    "dev": "npm run test:watch & npm run watch",
     "build:dist": "node node_modules/.bin/webpack",
     "build:prod": "node node_modules/.bin/webpack --config webpack.config.minify.js",
     "build": "npm run build:dist & npm run build:prod",
@@ -44,5 +48,10 @@
   "bugs": {
     "url": "https://github.com/kentcdodds/apiCheck.js/issues"
   },
-  "homepage": "https://github.com/kentcdodds/apiCheck.js"
+  "homepage": "https://github.com/kentcdodds/apiCheck.js",
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run ci"
+    }
+  }
 }
