--- a/package.json
+++ b/package.json
@@ -3,37 +3,35 @@
   "version": "1.0.0",
   "description": "Validate the api to your functions to help people use them correctly. This is pretty much React's propTypes without React.",
   "main": "./dist/apiCheck.js",
-  "dependencies": {
-    "chai": "^1.10.0",
-    "lodash-node": "^3.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "6to5": "^3.3.12",
-    "6to5-core": "^3.3.12",
-    "6to5-loader": "^3.0.0",
     "async": "^0.9.0",
-    "chalk": "^0.5.1",
+    "babel": "^4.4.6",
+    "babel-loader": "^4.0.0",
+    "chai": "^2.1.0",
+    "chalk": "^1.0.0",
     "coveralls": "^2.11.2",
     "ghooks": "^0.2.4",
     "glob": "^4.3.5",
     "istanbul": "^0.3.5",
     "jshint": "^2.6.0",
     "jshint-loader": "^0.8.2",
+    "lodash-node": "^3.1.0",
     "mocha": "^2.1.0",
     "mocha-loader": "^0.7.1",
     "webpack": "^1.5.3",
     "wr": "^1.3.1"
   },
   "scripts": {
-    "test": "mocha src/index.test.js --compilers js:6to5/register",
-    "test:watch": "mocha src/index.test.js --watch --compilers js:6to5/register",
+    "test": "mocha src/index.test.js --compilers js:babel/register",
+    "test:watch": "mocha src/index.test.js --watch --compilers js:babel/register",
     "watch": "./node_modules/wr/bin/wr -c 0 \"npm run build\" src/apiCheck.js src/apiCheckUtil.js src/checkers.js src/index.js",
     "dev": "npm run test:watch & npm run watch",
     "build:dist": "node node_modules/.bin/webpack",
     "build:prod": "node node_modules/.bin/webpack --config webpack.config.minify.js",
     "build": "npm run build:dist & npm run build:prod",
     "ci": "npm run only-check && npm run test && npm run coverage && npm run check-coverage && npm run build",
-    "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/index.test.js --compilers js:6to5/register",
+    "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/index.test.js --compilers js:babel/register",
     "check-coverage": "./node_modules/istanbul/lib/cli.js check-coverage --statements 100 --functions 100 --lines 100 --branches 100",
     "coveralls": "cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "only-check": "node other/only-check.js"
