--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "apiCheck.js",
+  "name": "api-check",
   "version": "1.0.0",
   "homepage": "https://github.com/kentcdodds/apiCheck.js",
   "authors": [
