--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-check",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "Validate the api to your functions to help people use them correctly. This is pretty much React's propTypes without React.",
   "main": "./dist/apiCheck.js",
   "dependencies": {},
@@ -31,7 +31,7 @@
     "build:prod": "node node_modules/.bin/webpack --config webpack.config.minify.js",
     "build": "npm run build:dist & npm run build:prod",
     "ci": "npm run only-check && npm run test && npm run coverage && npm run check-coverage && npm run build",
-    "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/index.test.js --compilers js:babel/register",
+    "coverage": "npm run only-check && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/index.test.js --compilers js:babel/register",
     "check-coverage": "./node_modules/istanbul/lib/cli.js check-coverage --statements 100 --functions 100 --lines 100 --branches 100",
     "coveralls": "cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "only-check": "node other/only-check.js"
