--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "api-check",
-  "version": "6.0.11",
+  "version": "7.0.0-beta.0",
   "description": "Validate the api to your functions to help people use them correctly. This is pretty much React's propTypes without React.",
-  "main": "./dist/apiCheck.js",
+  "main": "./dist/api-check.js",
   "dependencies": {},
   "devDependencies": {
     "async": "^0.9.0",
@@ -23,6 +23,7 @@
     "wr": "^1.3.1"
   },
   "scripts": {
+    "start": "npm run test:watch",
     "test": "mocha src/index.test.js --compilers js:babel/register",
     "test:watch": "mocha src/index.test.js --watch --compilers js:babel/register",
     "watch": "./node_modules/wr/bin/wr -c 0 \"npm run build\" src/apiCheck.js src/apiCheckUtil.js src/checkers.js src/index.js",
