--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-check",
-  "version": "7.0.0-beta.0",
+  "version": "7.0.0-beta.1",
   "description": "Validate the api to your functions to help people use them correctly. This is pretty much React's propTypes without React.",
   "main": "./dist/api-check.js",
   "dependencies": {},
@@ -16,6 +16,7 @@
     "istanbul": "^0.3.5",
     "jshint": "^2.6.0",
     "jshint-loader": "^0.8.2",
+    "json-stringify-safe": "^5.0.0",
     "lodash-node": "^3.1.0",
     "mocha": "^2.1.0",
     "mocha-loader": "^0.7.1",
