Improving build scripts

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "test:watch": "mocha src/index.test.js --watch --compilers js:babel/register",
     "watch": "./node_modules/wr/bin/wr -c 0 \"npm run build\" src/apiCheck.js src/apiCheckUtil.js src/checkers.js src/index.js",
     "dev": "npm run test:watch & npm run watch",
-    "build:dist": "node node_modules/.bin/webpack",
-    "build:prod": "node node_modules/.bin/webpack --config webpack.config.minify.js",
+    "build:dist": "NODE_ENV=development webpack --colors --progress",
+    "build:prod": "NODE_ENV=production webpack --colors --progress",
     "build": "npm run build:dist & npm run build:prod",
     "ci": "npm run code-checks && npm run test && npm run coverage && npm run check-coverage && npm run build",
     "coverage": "npm run code-checks && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/index.test.js --compilers js:babel/register",
