--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "api-check",
-  "version": "7.2.2",
+  "version": "7.2.3-beta.0",
   "homepage": "https://github.com/kentcdodds/apiCheck.js",
   "authors": [
     "Kent C. Dodds <kent@doddsfamily.us> (http://kent.doddsfamily.us)"
