--- a/.npmignore
+++ b/.npmignore
@@ -1,13 +1,1 @@
-.idea
-coverage
-node_modules
-other
-.editorconfig
-.gitignore
-.jshintrc
-.travis.yml
-bower.json
-index.html
-npm-debug.log
-webpack.config.js
-webpack.config.minify.js
+node_modules/kcd-common-tools/shared/link/npmignore
