--- a/package.json
+++ b/package.json
@@ -2,64 +2,81 @@
   "name": "api-check",
   "version": "7.3.0",
   "description": "Validate the api to your functions to help people use them correctly. This is pretty much React's propTypes without React.",
-  "main": "./dist/api-check.js",
+  "main": "dist/api-check.js",
   "dependencies": {},
   "devDependencies": {
-    "async": "^0.9.0",
-    "babel": "^4.4.6",
-    "babel-loader": "^4.0.0",
-    "chai": "^2.1.0",
-    "chalk": "^1.0.0",
-    "coveralls": "^2.11.2",
-    "ghooks": "^0.2.4",
-    "glob": "^4.3.5",
-    "istanbul": "^0.3.5",
-    "jshint": "^2.6.0",
-    "jshint-loader": "^0.8.2",
-    "json-stringify-safe": "^5.0.0",
-    "lodash-node": "^3.1.0",
-    "mocha": "^2.1.0",
-    "mocha-loader": "^0.7.1",
-    "webpack": "^1.5.3",
-    "wr": "^1.3.1"
+    "babel": "5.5.8",
+    "babel-core": "5.5.8",
+    "babel-eslint": "3.1.17",
+    "babel-loader": "5.1.4",
+    "chai": "2.1.0",
+    "eslint": "0.23.0",
+    "eslint-loader": "0.14.0",
+    "ghooks": "0.2.4",
+    "isparta": "3.0.3",
+    "isparta-loader": "0.2.0",
+    "istanbul": "0.3.5",
+    "json-stringify-safe": "5.0.0",
+    "karma": "0.12.36",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "0.1.12",
+    "karma-coverage": "0.4.2",
+    "karma-firefox-launcher": "0.1.6",
+    "karma-mocha": "0.1.10",
+    "karma-webpack": "1.5.1",
+    "kcd-common-tools": "1.0.0-beta.9",
+    "lodash": "3.9.3",
+    "mocha": "2.1.0",
+    "node-libs-browser": "^0.5.2",
+    "uglify-loader": "1.2.0",
+    "webpack": "1.9.11",
+    "with-package": "0.2.0"
   },
   "scripts": {
-    "start": "npm run test:watch",
-    "test": "mocha src/index.test.js --compilers js:babel/register",
-    "test:watch": "mocha src/index.test.js --watch --compilers js:babel/register",
-    "watch": "./node_modules/wr/bin/wr -c 0 \"npm run build\" src/apiCheck.js src/apiCheckUtil.js src/checkers.js src/index.js",
-    "dev": "npm run test:watch & npm run watch",
-    "build:dist": "NODE_ENV=development webpack --colors --progress",
-    "build:prod": "NODE_ENV=production webpack --colors --progress",
+    "start": "npm run test",
+    "test": "COVERAGE=true NODE_ENV=test karma start",
+    "test:single": "COVERAGE=true NODE_ENV=test karma start --single-run",
+    "test:debug": "echo 'WARNING: This is currently not working quite right...' && NODE_ENV=test karma start --browsers Chrome",
+    "build:dist": "NODE_ENV=development webpack --config node_modules/kcd-common-tools/shared/webpack.config.js --progress --colors",
+    "build:prod": "NODE_ENV=production webpack --config node_modules/kcd-common-tools/shared/webpack.config.js --progress --colors",
     "build": "npm run build:dist & npm run build:prod",
-    "ci": "npm run code-checks && npm run test && npm run coverage && npm run check-coverage && npm run build",
-    "coverage": "npm run code-checks && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/index.test.js --compilers js:babel/register",
+    "ci": "npm run code-checks && npm run test:single && npm run check-coverage && npm run build",
     "check-coverage": "./node_modules/istanbul/lib/cli.js check-coverage --statements 100 --functions 100 --lines 100 --branches 100",
-    "coveralls": "cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "only-check": "node other/only-check.js",
-    "console-check": "node other/console-check.js",
+    "only-check": "node node_modules/kcd-common-tools/shared/scripts/only-check.js",
+    "console-check": "node node_modules/kcd-common-tools/shared/scripts/console-check.js",
     "code-checks": "npm run only-check && npm run console-check",
-    "release": "git push && npm publish && git push --tags"
+    "release": "npm run build && with-package git commit -am pkg.version && with-package git tag pkg.version && git push && npm publish && git push --tags",
+    "release:beta": "npm run release && npm run tag:beta",
+    "tag:beta": "with-package npm dist-tag add pkg.name@pkg.version beta"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kentcdodds/apiCheck.js"
+    "url": "https://github.com/kentcdodds/api-check"
   },
   "keywords": [
     "javascript",
     "validation",
     "api",
-    "function"
+    "function",
+    "propTypes"
   ],
   "author": "Kent C. Dodds <kent@doddsfamily.us> (http://kent.doddsfamily.us)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kentcdodds/apiCheck.js/issues"
+    "url": "https://github.com/kentcdodds/api-check/issues"
   },
-  "homepage": "https://github.com/kentcdodds/apiCheck.js",
+  "homepage": "https://github.com/kentcdodds/api-check",
   "config": {
     "ghooks": {
       "pre-commit": "npm run ci"
+    }
+  },
+  "kcdCommon": {
+    "webpack": {
+      "output": {
+        "library": "apiCheck",
+        "libraryTarget": "umd"
+      }
     }
   }
 }
