Adding circleci and surge!

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-eslint": "3.1.17",
     "babel-loader": "5.1.4",
     "chai": "2.1.0",
+    "codacy-coverage": "1.1.2",
     "eslint": "0.23.0",
     "eslint-loader": "0.14.0",
     "ghooks": "0.2.4",
@@ -28,6 +29,7 @@
     "lodash": "3.9.3",
     "mocha": "2.1.0",
     "node-libs-browser": "^0.5.2",
+    "surge": "0.14.2",
     "uglify-loader": "1.2.0",
     "webpack": "1.9.11",
     "with-package": "0.2.0"
@@ -42,6 +44,11 @@
     "build": "npm run build:dist & npm run build:prod",
     "ci": "npm run code-checks && npm run test:single && npm run check-coverage && npm run build",
     "check-coverage": "./node_modules/istanbul/lib/cli.js check-coverage --statements 100 --functions 100 --lines 100 --branches 100",
+    "report-coverage": "cat ./coverage/lcov.info | codacy-coverage",
+    "deploy": "npm run deployClean && npm run deployCopy && npm run deploySurge",
+    "deploySurge": "surge -p deploy.ignored -d api-check.surge.sh",
+    "deployCopy": "cp index.html deploy.ignored/ && cp dist/api-check.js deploy.ignored/dist/",
+    "deployClean": "rm -rf deploy.ignored/ && mkdir deploy.ignored/ && mkdir deploy.ignored/dist/",
     "only-check": "node node_modules/kcd-common-tools/shared/scripts/only-check.js",
     "console-check": "node node_modules/kcd-common-tools/shared/scripts/console-check.js",
     "code-checks": "npm run only-check && npm run console-check",
