--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "babel-eslint": "3.1.17",
     "babel-loader": "5.1.4",
     "chai": "2.1.0",
-    "codeclimate-test-reporter": "0.0.4",
+    "codecov.io": "0.1.4",
     "eslint": "0.23.0",
     "eslint-loader": "0.14.0",
     "ghooks": "0.2.4",
@@ -44,7 +44,7 @@
     "build": "npm run build:dist & npm run build:prod",
     "ci": "npm run code-checks && npm run test:single && npm run check-coverage && npm run build",
     "check-coverage": "./node_modules/istanbul/lib/cli.js check-coverage --statements 100 --functions 100 --lines 100 --branches 100",
-    "report-coverage": "codeclimate < ./coverage/lcov.info",
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
     "deploy": "npm run deployClean && npm run deployCopy && npm run deploySurge",
     "deploySurge": "surge -p deploy.ignored -d api-check.surge.sh",
     "deployCopy": "cp index.html deploy.ignored/ && cp dist/api-check.js deploy.ignored/dist/",
