Removed files not needed in bower packages
Making the bower package smaller

--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,8 @@
     "other",
     ".editorconfig",
     ".travis.yml",
+    ".eslintrc",
+    "src",
     "webpack.config.js",
     "webpack.config.minify.js"
   ]
