--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "bootstrap": "3.3.5",
     "chai": "3.3.0",
     "codecov.io": "0.1.4",
-    "commitizen": "1.0.5",
-    "cz-conventional-changelog": "1.1.2",
+    "commitizen": "2.3.0",
+    "cz-conventional-changelog": "1.1.4",
     "eslint": "1.5.1",
     "eslint-config-kentcdodds": "4.0.0",
     "eslint-loader": "1.0.0",
@@ -80,10 +80,10 @@
   "config": {
     "ghooks": {
       "pre-commit": "./node_modules/.bin/validate-commit-msg && npm run code-checks && npm t && npm run check-coverage"
+    },
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
     }
-  },
-  "czConfig": {
-    "path": "node_modules/cz-conventional-changelog"
   },
   "kcdCommon": {
     "webpack": {
