fix(scripts): Remove prepublish because that apparently runs on install :-(
ref https://github.com/npm/npm/issues/10074

--- a/package.json
+++ b/package.json
@@ -56,9 +56,7 @@
     "deployCopy": "cp index.html deploy.ignored/ && cp dist/api-check.js deploy.ignored/dist/",
     "deployClean": "rm -rf deploy.ignored/ && mkdir deploy.ignored/ && mkdir deploy.ignored/dist/",
     "code-checks": "eslint src/",
-    "prepublish": "npm run build",
-    "postpublish": "publish-latest",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm run build && npm publish && publish-latest && semantic-release post"
   },
   "repository": {
     "type": "git",
